fix z-index of toolbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,7 @@
 */
 
 .toolbar {
+    position: sticky;
     z-index: 9;
 }
 
